--- a/public/index.html
+++ b/public/index.html
@@ -469,13 +469,13 @@ a,
                                             <div class="margin-top margin-large">
                                                 <div class="button-group is-center">
                                                     <a class="button w-button"
-                                                        href="https://app.decodable.co/-/accounts/create">
-                                                        Start Free
+                                                        href="https://aviquo-deploy.vercel.app/discover">
+                                                        Get Started
                                                     </a>
-                                                    <a class="button is-secondary w-button"
+                                                    <!-- <a class="button is-secondary w-button"
                                                         href="https://docs.decodable.co/">
                                                         Documentation
-                                                    </a>
+                                                    </a> -->
                                                 </div>
                                             </div>
                                         </div>
