--- a/public/index.html
+++ b/public/index.html
@@ -469,7 +469,7 @@ a,
                                             <div class="margin-top margin-large">
                                                 <div class="button-group is-center">
                                                     <a class="button w-button"
-                                                        href="https://aviquo-deploy.vercel.app/discover">
+                                                        href="/discover">
                                                         Get Started
                                                     </a>
                                                     <!-- <a class="button is-secondary w-button"
@@ -801,7 +801,7 @@ a,
                                             <a aria-current="page" class="footer5_logo-link w-nav-brand" href="/"
                                                 id="w-node-_9ca02df1-b359-12da-2558-e68bd831c1b9-ca8f72a6">
                                                 <img alt="Decodable logo" height="40px" width="40px" loading="lazy"
-                                                    src="https://aviquo-deploy.vercel.app/aviquo_logo.png" />
+                                                    src="/aviquo_logo.png" />
                                             </a>
                                             <p class="text-size-small text-weight-medium">
                                                 Build real-time data apps &amp; services. Fast.
